meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/network/snapshots/memfaultd__network__requests__test__device_config.snap
---
source: memfaultd/src/network/requests.rs
expression: response
snapshot_kind: text
---
{
  "data": {
    "config": {
      "memfault": {
        "sampling": {
          "debugging.resolution": "normal",
          "logging.resolution": "high",
          "monitoring.resolution": "low"
        },
        "data_upload_start_date": "1991-03-25T00:00:00+00:00",
        "memfaultd": null
      }
    },
    "revision": 123,
    "completed": 100
  }
}
