meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/network/snapshots/memfaultd__network__requests__test__prepare_upload_serialization.snap
---
source: memfaultd/src/network/requests.rs
expression: prepare_request
snapshot_kind: text
---
{
  "content_encoding": null,
  "size": 123,
  "device": {
    "device_serial": "device_id",
    "hardware_version": "hardware_version",
    "software_version": "software_version",
    "software_type": "software_type"
  },
  "kind": "MAR"
}
